--- a/app/src/main/res/layout-v26/list_item_to_do.xml
+++ b/app/src/main/res/layout-v26/list_item_to_do.xml
@@ -12,22 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text"
+        app:layout_constraintEnd_toStartOf="@+id/deal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/text"
-        android:layout_width="0dp"
+        android:id="@+id/deal"
+        android:layout_width="305dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
+        android:justificationMode="inter_word"
         android:maxLines="3"
-        android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="@dimen/toDoItemTextSize"
-        android:justificationMode="inter_word"
         app:layout_constraintBottom_toTopOf="@id/deadline"
         app:layout_constraintEnd_toStartOf="@+id/info"
         app:layout_constraintStart_toEndOf="@+id/isDone"
@@ -38,21 +37,24 @@
         android:id="@+id/deadline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/toDoItemDeadlineTextSize"
         android:layout_marginBottom="@dimen/toDoItemDeadlineMarginBottom"
-        app:layout_constraintStart_toStartOf="@+id/text"
-        app:layout_constraintTop_toBottomOf="@id/text"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textSize="@dimen/toDoItemDeadlineTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/deal"
+        app:layout_constraintStart_toStartOf="@+id/deal"
+        app:layout_constraintTop_toBottomOf="@id/deal"
         tools:text="@string/dateSample" />
 
     <ImageView
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text"
-        app:layout_constraintTop_toTopOf="@id/text"
         android:paddingHorizontal="@dimen/toDoItemInfoPaddingHorizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/deal"
+        app:layout_constraintTop_toTopOf="@id/deal"
         app:srcCompat="@drawable/baseline_info_outline_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
