--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -55,7 +55,8 @@
             android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             tools:itemCount="10"
-            tools:listitem="@layout/list_item_to_do" />
+            tools:listitem="@layout/list_item_to_do"
+            />
 
 
 <!--    </com.google.android.material.card.MaterialCardView>-->
