--- a/app/src/main/res/menu/menu_all_deals.xml
+++ b/app/src/main/res/menu/menu_all_deals.xml
@@ -5,7 +5,8 @@
     <item android:id="@+id/viewAll"
         android:title="@string/viewAll"
         android:icon="@drawable/baseline_visibility_24"
-        app:showAsAction="collapseActionView|ifRoom"/>
+        app:showAsAction="collapseActionView|ifRoom"
+        />
 <!--        app:actionProviderClass="com.google.android.material.appbar.CollapsingToolbarLayout" -->
 <!--        />-->
 
