--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/backPrimary"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
@@ -12,30 +13,50 @@
         android:layout_height="wrap_content"
         app:liftOnScrollTargetViewId="@id/recyclerView"
         android:fitsSystemWindows="true"
+        app:elevation="16dp"
+        android:background="@color/backPrimary"
         >
 
-<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--            android:id="@+id/collapsingToolbar"-->
-<!--            style="?attr/collapsingToolbarLayoutMediumStyle"-->
-<!--            android:background="@color/material_dynamic_neutral90"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"-->
-<!--            android:fitsSystemWindows="true"-->
-<!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
+            style="?attr/collapsingToolbarLayoutMediumStyle"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+            android:background="@color/backPrimary"
+            >
 
-<!--            >-->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_collapseMode="pin"
+                android:background="@color/backPrimary">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="sdsdsdsd"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:elevation="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:elevation="8dp"
                 app:layout_collapseMode="pin"
                 app:title="Мои дела"
+                android:background="@color/backPrimary"
                 app:menu="@menu/menu_all_deals"
                 />
 
-<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -49,23 +70,24 @@
 <!--        android:background="@color/white"-->
 <!--        >-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-            tools:itemCount="10"
-            tools:listitem="@layout/list_item_to_do"
-            />
+
+    <!--    </com.google.android.material.card.MaterialCardView>-->
 
 
-<!--    </com.google.android.material.card.MaterialCardView>-->
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="4dp"
+        tools:itemCount="10"
+        tools:listitem="@layout/list_item_to_do" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue"
         app:fabSize="normal"
         app:layout_anchor="@id/recyclerView"
         app:layout_anchorGravity="bottom|end"
