--- a/app/src/main/res/layout/list_item_to_do.xml
+++ b/app/src/main/res/layout/list_item_to_do.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
     android:background="@color/white"
+    android:elevation="4dp"
     android:paddingStart="@dimen/toDoItemPaddingStart"
     android:paddingEnd="@dimen/toDoItemPaddingEnd">
 
@@ -13,21 +15,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/deal"
+        app:layout_constraintEnd_toStartOf="@id/deal"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/deal"
-        android:layout_width="305dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/black"
         android:textSize="@dimen/toDoItemTextSize"
-        app:layout_constraintBottom_toTopOf="@id/deadline"
         app:layout_constraintEnd_toStartOf="@+id/info"
         app:layout_constraintStart_toEndOf="@+id/isDone"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,11 +39,9 @@
         android:id="@+id/deadline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/toDoItemDeadlineMarginBottom"
         android:ellipsize="end"
-        android:maxLines="1"
+        android:lines="1"
         android:textSize="@dimen/toDoItemDeadlineTextSize"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/deal"
         app:layout_constraintStart_toStartOf="@+id/deal"
         app:layout_constraintTop_toBottomOf="@id/deal"
@@ -52,9 +52,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/toDoItemInfoPaddingHorizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/deal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/deal"
         app:layout_constraintTop_toTopOf="@id/deal"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/baseline_info_outline_24" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="deadline,isDone,info" />
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="8dp"
+        app:layout_constraintTop_toBottomOf="@id/deadline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
