--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,23 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">@color/black</color>
+    <color name="secondary">#99000000</color>
+    <color name="tertiary">#4d000000</color>
+    <color name="disable">#26000000</color>
+    <color name="separator">#33000000</color>
+    <color name="overlay">#0f000000</color>
+    <color name="red">#FF3B30</color>
+    <color name="green">#34C759</color>
+    <color name="blue">#007AFF</color>
+    <color name="gray">#8E8E93</color>
+    <color name="grayLight">#D1D1D6</color>
+    <color name="backPrimary">#F7F6F2</color>
+    <color name="backSecondary">@color/white</color>
+    <color name="backElevation">@color/white</color>
+
 </resources>
