--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -17,16 +17,15 @@
         android:background="@color/backPrimary"
         >
 
-<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--            android:id="@+id/collapsingToolbar"-->
-<!--            style="?attr/collapsingToolbarLayoutMediumStyle"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"-->
-<!--            android:fitsSystemWindows="true"-->
-<!--            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"-->
-<!--            android:background="@color/backPrimary"-->
-<!--            >-->
-
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
+            style="?attr/collapsingToolbarLayoutLargeStyle"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+            android:background="@color/backPrimary"
+            >
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
@@ -40,14 +39,32 @@
                 app:menu="@menu/menu_all_deals"
                 />
 
-
             <View android:id="@+id/toolbarShadow"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
+                android:layout_gravity="bottom"
                 android:background="@drawable/toolbar_dropshadow"/>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/df"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_collapseMode="pin">
 
-<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+                <ImageView
+                    android:id="@+id/sdsd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="20dp"
+                    android:src="@drawable/baseline_visibility_24"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
