--- a/app/src/main/res/drawable/toolbar_dropshadow.xml
+++ b/app/src/main/res/drawable/toolbar_dropshadow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@android:color/transparent"
+    <gradient android:startColor="#00333333"
         android:endColor="#88333333"
         android:angle="90"/>
 
