--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -25,8 +25,8 @@
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             android:background="@color/backPrimary"
             app:titleCollapseMode="scale"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginBottom="48dp"
+            app:expandedTitleMarginStart="60dp"
+            app:expandedTitleMarginBottom="54dp"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar"
             >
 
@@ -80,6 +80,20 @@
                 android:layout_height="?attr/actionBarSize"
                 app:title="Мои дела"
                 app:layout_collapseMode="pin"
+                />
+
+            <TextView
+                android:id="@+id/textDone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Выполнено - "
+                android:textColor="@color/gray"
+                android:textSize="20sp"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="60dp"
                 />
 
             <ImageView
@@ -141,7 +155,7 @@
         app:layout_anchor="@id/shadowToolbarLayout"
         app:layout_anchorGravity="bottom|end"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="60dp"
         android:src="@drawable/baseline_add_24" />
 <!--        app:hideMotionSpec=""-->
 
