--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -90,6 +90,8 @@
                 android:text="Выполнено - "
                 android:textColor="@color/gray"
                 android:textSize="20sp"
+                android:lines="1"
+                android:ellipsize="start"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5"
                 android:layout_gravity="start|bottom"
@@ -154,8 +156,8 @@
         app:fabSize="normal"
         app:layout_anchor="@id/shadowToolbarLayout"
         app:layout_anchorGravity="bottom|end"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/baseline_add_24" />
 <!--        app:hideMotionSpec=""-->
 
