Показываю / скрываю выполенные дела при нажатии на кнопочку

--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -99,7 +99,7 @@
                 />
 
             <ImageView
-                android:id="@+id/sdsd"
+                android:id="@+id/showAllDeals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
