--- a/app/src/main/res/layout/fragment_change_deal.xml
+++ b/app/src/main/res/layout/fragment_change_deal.xml
@@ -1,14 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:background="@color/backPrimary"
     android:layout_height="match_parent"
-    tools:context=".ui.changeDealScreen.ChangeDealFragment">
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:background="@color/backPrimary"
+        >
 
-</FrameLayout>
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/menu_change_deal"
+            app:navigationIcon="@drawable/baseline_close_24"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <FrameLayout
+        android:id="@+id/shadowToolbarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/whatToDo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginVertical="4dp"
+                    android:background="@drawable/view_rounded_corners"
+                    android:elevation="4dp"
+                    android:minHeight="150dp"
+                    android:gravity="top"
+                    android:hint="Что надо сделать..."
+                    android:inputType="textMultiLine"
+                    android:padding="16dp"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:id="@+id/importanceText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Важность"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/whatToDo"/>
+
+                <TextView
+                    android:id="@+id/importance"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Нет"
+                    android:layout_marginStart="16dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/importanceText"/>
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider1"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/importance"/>
+
+                <TextView
+                    android:id="@+id/deadlineText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Сделать до"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/divider1"/>
+
+                <TextView
+                    android:id="@+id/deadlineDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    tools:text="22 апреля 1999"
+                    android:textSize="16sp"
+                    android:textColor="@color/blue"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/deadlineText"
+                    app:layout_constraintTop_toBottomOf="@id/deadlineText"/>
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/deadlineEnable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/deadlineText"
+                    app:layout_constraintBottom_toBottomOf="@id/deadlineDate"/>
+
+                <androidx.constraintlayout.widget.Barrier
+                    android:id="@+id/barrier1"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:barrierDirection="bottom"
+                    app:constraint_referenced_ids="deadlineText,deadlineEnable,deadlineDate"
+                    />
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/barrier1"/>
+
+                <ImageView
+                    android:id="@+id/deleteImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/divider2"
+                    android:src="@drawable/baseline_delete_24"
+                    android:layout_margin="20dp"/>
+
+                <TextView
+                    android:id="@+id/deleteText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Удалить"
+                    android:textSize="20sp"
+                    android:textColor="@color/gray"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintStart_toEndOf="@id/deleteImage"
+                    app:layout_constraintTop_toTopOf="@id/deleteImage"
+                    />
+
+                <androidx.constraintlayout.widget.Barrier
+                    android:id="@+id/barrier2"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:barrierDirection="bottom"
+                    android:layout_marginBottom="40dp"
+                    app:constraint_referenced_ids="deleteImage,deleteText"
+                    />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:layout_constraintTop_toBottomOf="@id/barrier2"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.core.widget.NestedScrollView>
+
+        <View android:id="@+id/toolbarShadow"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_gravity="top"
+            android:background="@drawable/toolbar_dropshadow"/>
+
+    </FrameLayout>
+
+
+</LinearLayout>
