--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:background="@color/backPrimary"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/main"
+        app:navGraph="@navigation/main_graph"
         app:defaultNavHost="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
