--- a/app/src/main/res/menu/menu_change_deal.xml
+++ b/app/src/main/res/menu/menu_change_deal.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/save"
+        android:id="@+id/itemSave"
         android:title="Сохранить"
         app:showAsAction="ifRoom"
         />
