Добавил частично обработку событий на втором экране. Переделать апдейт вьюх через обсерверы лайвдаты из вьюмодели, ибо вьюмодель перезаписывает их стейт, когда инициализируется

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -21,6 +21,7 @@
         tools:layout="@layout/fragment_change_deal" >
         <argument
             android:name="DEAL_ID"
-            app:argType="long" />
+            app:argType="long"
+            android:defaultValue="-1L" />
     </fragment>
 </navigation>
