--- a/app/src/main/res/layout/fragment_change_deal.xml
+++ b/app/src/main/res/layout/fragment_change_deal.xml
@@ -182,6 +182,7 @@
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:layout_gravity="top"
+            android:visibility="invisible"
             android:background="@drawable/toolbar_dropshadow"/>
 
     </FrameLayout>
