--- a/app/src/main/res/layout/fragment_change_deal.xml
+++ b/app/src/main/res/layout/fragment_change_deal.xml
@@ -60,6 +60,19 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
+                <View
+                    android:id="@+id/importanceView"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/whatToDo"
+                    app:layout_constraintBottom_toTopOf="@id/divider1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
                 <TextView
                     android:id="@+id/importanceText"
                     android:layout_width="0dp"
@@ -70,17 +83,7 @@
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/whatToDo"/>
-<!--<Spinner-->
-<!--    android:id="@+id/importance"-->
-<!--    android:layout_width="0dp"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:text="Нет"-->
-<!--    android:layout_marginStart="16dp"-->
-<!--    android:textSize="16sp"-->
-<!--    android:textColor="@color/gray"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    app:layout_constraintTop_toBottomOf="@id/importanceText"-->
-<!--    />-->
+
                 <TextView
                     android:id="@+id/importance"
                     android:layout_width="0dp"
