Чутка переписал AllDealsFragment и ещё по мелочи

--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -79,7 +79,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:itemCount="10"
             tools:listitem="@layout/list_item_to_do" />
 
