Убираю из макета числа и строки fragment_change_deal.xml

--- a/app/src/main/res/layout/fragment_change_deal.xml
+++ b/app/src/main/res/layout/fragment_change_deal.xml
@@ -46,16 +46,16 @@
                     android:id="@+id/whatToDo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginVertical="4dp"
+                    android:layout_marginHorizontal="@dimen/changeDealMarginHorizontal"
+                    android:layout_marginVertical="@dimen/changeDealTopItemMarginVertical"
                     android:background="@drawable/view_rounded_corners"
-                    android:elevation="4dp"
+                    android:elevation="@dimen/elevationMid"
                     android:minHeight="150dp"
                     android:gravity="top"
-                    android:hint="Что надо сделать..."
+                    android:hint="@string/changeDealEditTextHint"
                     android:inputType="textMultiLine"
                     android:padding="16dp"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/textSizeMid"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -77,10 +77,10 @@
                     android:id="@+id/importanceText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Важность"
-                    android:layout_marginStart="16dp"
+                    android:text="@string/importance"
+                    android:layout_marginStart="@dimen/changeDealMarginHorizontal"
                     android:layout_marginTop="24dp"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/textSizeMid"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/whatToDo"/>
 
@@ -88,9 +88,9 @@
                     android:id="@+id/importance"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Нет"
+                    android:text="@string/importanceAverage"
                     android:layout_marginStart="16dp"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/textSizeSmall"
                     android:textColor="@color/gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/importanceText"/>
@@ -100,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginHorizontal="@dimen/changeDealMarginHorizontal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/importance"/>
 
@@ -108,10 +108,10 @@
                     android:id="@+id/deadlineText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Сделать до"
-                    android:layout_marginStart="16dp"
+                    android:text="@string/deadlineText"
+                    android:layout_marginStart="@dimen/changeDealMarginHorizontal"
                     android:layout_marginTop="24dp"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/textSizeMid"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/divider1"/>
 
@@ -120,7 +120,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tools:text="22 апреля 1999"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/textSizeSmall"
                     android:textColor="@color/blue"
                     android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@id/deadlineText"
@@ -130,7 +130,7 @@
                     android:id="@+id/deadlineEnable"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="@dimen/changeDealMarginHorizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/deadlineText"
                     app:layout_constraintBottom_toBottomOf="@id/deadlineDate"/>
@@ -178,8 +178,8 @@
                     android:id="@+id/deleteText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Удалить"
-                    android:textSize="20sp"
+                    android:text="@string/delete"
+                    android:textSize="@dimen/textSizeMid"
                     android:textColor="@color/gray"
                     android:layout_marginStart="20dp"
                     app:layout_constraintStart_toEndOf="@id/deleteImage"
@@ -207,7 +207,7 @@
 
         <View android:id="@+id/toolbarShadow"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/toolbarShadowHeight"
             android:layout_gravity="top"
             android:visibility="invisible"
             android:background="@drawable/toolbar_dropshadow"/>
