--- a/app/src/main/res/layout/fragment_change_deal.xml
+++ b/app/src/main/res/layout/fragment_change_deal.xml
@@ -52,6 +52,7 @@
                     android:elevation="@dimen/elevationMid"
                     android:minHeight="150dp"
                     android:gravity="top"
+                    android:maxLength="3000"
                     android:hint="@string/changeDealEditTextHint"
                     android:inputType="textMultiLine"
                     android:padding="16dp"
